boilerplate, rough home section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<meta name="description" content="">
 		<meta name="author" content="Max Yeo">
 
-		<link rel="shortcut icon" href="">
-		<link rel="apple-touch-icon" href="">
+		<link rel="shortcut icon" href="img/logo.png">
+		<link rel="apple-touch-icon" href="img/logo.png">
 
 		<link rel="stylesheet" href="global.css" type="text/css">
 		<script type="text/javascript" src="js/jquery.js"></script>
@@ -21,10 +21,47 @@
 
 	<body>
 		<header>
-			
+			<a href="/" id="logo"><div></div></a>
+			<nav>
+				<a href="#about">About</a>
+				<a href="#enterprises">Enterprises</a>
+				<a href="#team">The Team</a>
+				<a href="#start-your-venture">Start Your Venture</a>
+				<a href="#contact">Contact</a>
+			</nav>
 		</header>
 
+		<section id="home" class="top" style="background-image: url(img/present.jpg);">
+			<div id="filter"></div>
+			<div id="home-wrapper">
+				<div id="home-logo" style="background-image: url(img/logo.png);"></div>
+				<h2>A Student Run Venture Capital Firm</h2>
+			</div>
+		</section>
+
+		<section id="about">
+			<div class="grid">
+				<h2>About</h2>
+				<h2>History</h2>
+			</div>
+		</section>
 		
+		<section id="enterprises">
+
+		</section>
+
+		<section id="team">
+
+		</section>
+
+		<section id="start-your-venture">
+
+		</section>
+
+		<section id="contact">
+
+		</section>
+
 		<footer>
 			
 		</footer>
