updating for new static work

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="shortcut icon" href="img/logo/logo.png">
 		<link rel="apple-touch-icon" href="img/logo/logo.png">
 
-		<link rel="stylesheet" href="global.css" type="text/css">
+		<link rel="stylesheet" href="style.css" type="text/css">
 	</head>
 
 	<body>
@@ -255,11 +255,6 @@
 					<div class="mem-photo" style="background-image: url(/img/team/sam.jpg);"></div>
 					<h3>Sam Austin</h3>
 					<h4>Manager and Co-founder Hop and Shake</h4>
-				</div>
-				<div class="col-1-6 mem">
-					<div class="mem-photo" style="background-image: url(/img/team/mattt.jpg);"></div>
-					<h3>Matthew Tam</h3>
-					<h4>Manager of Blue Jay Bay</h4>
 				</div>
 			</div>
 		</section>
