add the alumni page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -187,11 +187,6 @@
 					<h4>Manager of Hopkins Creative Design</h4>
 				</div>
 				<div class="col-1-6 mem">
-					<div class="mem-photo" style="background-image: url(/img/team/mattj.jpg);"></div>
-					<h3>Matthew Johnson</h3>
-					<h4>Manager of Blue Jay Bay</h4>
-				</div>
-				<div class="col-1-6 mem">
 					<div class="mem-photo" style="background-image: url(/img/team/rachel.png);"></div>
 					<h3>Rachel Xian</h3>
 					<h4>Manager of Blue Jay Boxes</h4>
@@ -257,7 +252,10 @@
 					<h4>Manager and Co-founder Hop and Shake</h4>
 				</div>
 			</div>
+			<div class ="toAlu"> The success of HSE is built by many past outstanding students, for more of their information, please check out our<a href="alumini.html"> Alumni Page </a> </div>
 		</section>
+		
+
 
 		<section id="start-your-venture" style="background-image: url(/img/has3.jpg)">
 			<div class="grid">
